# HM-CustomFontFile

./: README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
libnativerender/: .gitignore  Index.ets  oh-package-lock.json5  oh-package.json5
libnativerender/src/main/: module.json5
libnativerender/src/main/cpp/: CMakeLists.txt  napi_init.cpp
libnativerender/src/main/cpp/common/: log_common.h
libnativerender/src/main/cpp/manager/: plugin_manager.cpp  plugin_manager.h
libnativerender/src/main/cpp/render/: plugin_render.cpp  plugin_render.h  sample_graphics.cpp  sample_graphics.h
libnativerender/src/main/cpp/types/liblibnativerender/: Index.d.ts  oh-package.json5
libnativerender/src/main/ets/components/: MainPage.ets
libnativerender/src/main/ets/utils/: TexResFileUtils.ets
libnativerender/src/ohosTest/: module.json5
